--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "lib/cjs/util/*.*"
   ],
   "scripts": {
-    "test": "mocha --growl --reporter spec --require source-map-support/register --timeout 10000 lib/async/test",
     "pretest": "yarn dist",
+    "test": "mocha --growl --reporter spec --require source-map-support/register --timeout 20000 lib/async/test",
     "ci": "mocha --reporter spec --require source-map-support/register --timeout 10000 lib/cjs/test",
     "preci": "yarn install",
     "jenkins": "yarn ci -- --timeout 0 --reporter xunit-file",
@@ -53,10 +53,10 @@
     "prepare": "yarn dist && node -e 'require(\".\");'"
   },
   "dependencies": {
-    "@types/node": "*",
     "es6-error": "^4.0.1",
     "linkedlist": "^1.0.1",
     "multi-part": "^2.0.0",
+    "ws": "^6.1.0",
     "xhr": "^2.4.1"
   },
   "devDependencies": {
@@ -64,7 +64,6 @@
     "@types/mocha": "^5.2.1",
     "@types/request": "^2.47.1",
     "@types/request-promise": "^4.1.42",
-    "c8-instance-manager": "^0.1.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
@@ -85,6 +84,7 @@
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
     "webpack": "^3.0.0",
-    "xunit-file": "^1.0.0"
+    "xunit-file": "^1.0.0",
+    "yarn": "^1.10.1"
   }
 }
