--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "dist:async": "tsc -p . --outDir ./lib/async/ --target es2018 --declarationMap true && cpy src/index.js lib/async/",
     "dist:web": "webpack",
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
-    "prepare": "yarn dist && node -e 'require(\".\");'",
-    "devScript": "env TEST_C8_URL=https://qa1.ops.aws.macrometa.io mocha --timeout 50000 lib/async/test/${28}*.js --grep stream.websocket"
+    "prepare": "yarn dist && node -e 'require(\".\");'"
   },
   "dependencies": {
     "es6-error": "^4.0.1",
