--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "dist:async": "tsc -p . --outDir ./lib/async/ --target es2018 --declarationMap true && cpy src/index.js lib/async/",
     "dist:web": "webpack",
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
-    "prepare": "yarn dist && node -e 'require(\".\");'"
+    "prepare": "yarn dist && node -e 'require(\".\");'",
+    "devTest": "mocha --require source-map-support/register --timeout 20000 lib/async/test"
   },
   "dependencies": {
     "es6-error": "^4.0.1",
