--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "dist:web": "webpack",
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
     "prepare": "yarn dist && node -e 'require(\".\");'",
-    "devTest": "mocha --require source-map-support/register --timeout 20000 lib/async/test"
+    "predevTest": "npm run dist",
+    "devTest": "env TEST_C8_URL=https://abhishek.eng1.macrometa.io mocha --timeout 50000 lib/async/test/${31}*.js --grep fabric.saveQuery"
   },
   "dependencies": {
     "es6-error": "^4.0.1",
