--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
     "prepare": "yarn dist && node -e 'require(\".\");'",
     "predevTest": "npm run dist",
-    "devTest": "env TEST_C8_URL=https://abhishek.eng1.macrometa.io mocha --timeout 50000 lib/async/test/${31}*.js --grep fabric.Query"
+    "devTest": "env TEST_C8_URL=https://abhishek.eng1.macrometa.io mocha --timeout 50000 lib/async/test/27-manipulating-tenants"
   },
   "dependencies": {
     "es6-error": "^4.0.1",
