--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   ],
   "scripts": {
     "pretest": "yarn dist",
-    "test": "npm run dist && env TEST_C8_URL=https://lohani.eng1.macrometa.io mocha --timeout 50000 --growl --reporter mochawesome --require source-map-support/register --timeout 20000 lib/async/test",
+    "test": "npm run dist && env TEST_C8_URL=https://lohani.eng1.macrometa.io mocha --timeout 50000 --growl --reporter mochawesome --require source-map-support/register --timeout 20000 lib/async/test/16-graphs",
     "ci": "mocha --reporter spec --require source-map-support/register --timeout 10000 lib/cjs/test",
     "preci": "yarn install",
     "jenkins": "yarn ci -- --timeout 0 --reporter xunit-file",
