--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "lib/cjs/util/*.*"
   ],
   "scripts": {
-    "pretest": "yarn dist",
-    "test": "npm run dist && env TEST_C8_URL=https://lohani.eng1.macrometa.io mocha --timeout 50000 --growl --reporter mochawesome --require source-map-support/register --timeout 20000 lib/async/test/16-graphs",
+    "pretest": "npm run dist",
+    "test": "env TEST_C8_URL=https://petkov-europe-west4.eng1.macrometa.io mocha --timeout 50000 --growl --reporter mochawesome --require source-map-support/register --timeout 20000 lib/async/test",
     "ci": "mocha --reporter spec --require source-map-support/register --timeout 10000 lib/cjs/test",
     "preci": "yarn install",
     "jenkins": "yarn ci -- --timeout 0 --reporter xunit-file",
@@ -53,7 +53,7 @@
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
     "prepare": "yarn dist && node -e 'require(\".\");'",
     "predevTest": "npm run dist",
-    "devTest": "env TEST_C8_URL=https://fed.macrometa.io mocha --timeout 50000 lib/async/test/27-manipulating-tenants"
+    "devTest": "env TEST_C8_URL=https://lohani.eng1.macrometa.io mocha --reporter spec --timeout 50000 lib/async/test/16-graphs.js"
   },
   "dependencies": {
     "es6-error": "^4.0.1",
