--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   ],
   "scripts": {
     "pretest": "npm run dist",
-    "test": "env TEST_C8_URL=https://petkov-europe-west4.eng1.macrometa.io mocha --timeout 50000 --growl --reporter mochawesome --require source-map-support/register --timeout 20000 lib/async/test",
+    "test": "env TEST_C8_URL=https://lohani.eng1.macrometa.io mocha --timeout 60000 --growl --reporter mochawesome --require source-map-support/register lib/async/test",
     "ci": "mocha --reporter spec --require source-map-support/register --timeout 10000 lib/cjs/test",
     "preci": "yarn install",
     "jenkins": "yarn ci -- --timeout 0 --reporter xunit-file",
@@ -51,9 +51,9 @@
     "dist:async": "tsc -p . --outDir ./lib/async/ --target es2018 --declarationMap true && cpy src/index.js lib/async/",
     "dist:web": "webpack",
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
-    "prepare": "yarn dist && node -e 'require(\".\");'",
+    "prepare": "npm run dist && node -e 'require(\".\");'",
     "predevTest": "npm run dist",
-    "devTest": "env TEST_C8_URL=https://lohani.eng1.macrometa.io mocha --reporter spec --timeout 50000 lib/async/test/16-graphs.js"
+    "devTest": "env TEST_C8_URL=https://lohani.eng1.macrometa.io mocha --reporter spec --timeout 60000 lib/async/test/28-manipulating-streams.js --grep stream.manipulate"
   },
   "dependencies": {
     "es6-error": "^4.0.1",
