--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsc8",
-  "version": "0.15.1",
+  "version": "0.15.2",
   "license": "Apache-2.0",
   "description": "The official C8 JavaScript driver.",
   "homepage": "https://github.com/macrometacorp/jsC8",
@@ -59,6 +59,7 @@
     "es6-error": "^4.0.1",
     "linkedlist": "^1.0.1",
     "multi-part": "^2.0.0",
+    "query-string": "^6.11.1",
     "ws": "^6.1.0",
     "xhr": "^2.4.1"
   },
