--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsc8",
-  "version": "0.15.2",
+  "version": "0.15.3",
   "license": "Apache-2.0",
   "description": "The official C8 JavaScript driver.",
   "homepage": "https://github.com/macrometacorp/jsC8",
@@ -43,7 +43,7 @@
   ],
   "scripts": {
     "pretest": "npm run dist",
-    "test": "env TEST_C8_URL=https://lohani.eng1.macrometa.io mocha --timeout 60000 --growl --reporter mochawesome --require source-map-support/register lib/async/test",
+    "test": "env TEST_C8_URL=https://test.eng1.macrometa.io mocha --timeout 60000 --growl --reporter mochawesome --require source-map-support/register lib/async/test",
     "ci": "mocha --reporter spec --require source-map-support/register --timeout 10000 lib/cjs/test",
     "preci": "yarn install",
     "jenkins": "yarn ci -- --timeout 0 --reporter xunit-file",
@@ -53,7 +53,7 @@
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
     "prepare": "npm run dist && node -e 'require(\".\");'",
     "predevTest": "npm run dist",
-    "devTest": "env TEST_C8_URL=https://test.eng1.macrometa.io mocha --reporter spec --timeout 60000 lib/async/test/32-streamapps.js"
+    "devTest": "env TEST_C8_URL=https://test.eng1.macrometa.io mocha --reporter spec --timeout 60000 lib/async/test/28-manipulating-streams.js"
   },
   "dependencies": {
     "es6-error": "^4.0.1",
