--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "ci": "mocha --reporter spec --require source-map-support/register --timeout 10000 lib/cjs/test",
     "preci": "yarn install",
     "jenkins": "yarn ci -- --timeout 0 --reporter xunit-file",
-    "dist:cjs": "tsc -p . --outDir ./lib/cjs/ --declarationMap true && cpy src/index.js lib/cjs/",
-    "dist:async": "tsc -p . --outDir ./lib/async/ --target es2018 --declarationMap true && cpy src/index.js lib/async/",
+    "dist:cjs": "tsc -p . --outDir ./lib/cjs/ --declarationMap true && cpy src/index.js lib/cjs/ && cpy src/test/mockFiles lib/async/test/mockFiles",
+    "dist:async": "tsc -p . --outDir ./lib/async/ --target es2018 --declarationMap true && cpy src/index.js lib/async/ && cpy src/test/mockFiles lib/async/test/mockFiles",
     "dist:web": "webpack",
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
     "prepare": "npm run dist && node -e 'require(\".\");'",
@@ -56,7 +56,9 @@
     "devTest": "env TEST_C8_URL=https://test.eng1.macrometa.io mocha --reporter spec --timeout 60000 lib/async/test/28-manipulating-streams.js"
   },
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "es6-error": "^4.0.1",
+    "jwt-decode": "^2.2.0",
     "linkedlist": "^1.0.1",
     "multi-part": "^2.0.0",
     "query-string": "^6.11.1",
