--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "./lib/cjs/util/joinPath.js": "./lib/cjs/util/joinPath.web.js",
     "./lib/cjs/util/multipart.js": "./lib/cjs/util/multipart.web.js",
     "./lib/cjs/util/request.js": "./lib/cjs/util/request.web.js",
-    "./lib/cjs/util/webSocket.js": "./lib/cjs/util/webSocket.web.js"
+    "./lib/cjs/util/webSocket.js": "./lib/cjs/util/webSocket.web.js",
+    "./lib/cjs/util/parseCsv.js": "./lib/cjs/util/parseCsv.web.js"
   },
   "files": [
     "lib/*.*",
@@ -56,11 +57,11 @@
     "devTest": "env TEST_C8_URL=https://test.eng1.macrometa.io mocha --reporter spec --timeout 60000 lib/async/test/28-manipulating-streams.js"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10",
     "es6-error": "^4.1.1",
     "jwt-decode": "^2.2.0",
     "linkedlist": "^1.0.1",
     "multi-part": "^2.0.0",
+    "papaparse": "^5.3.1",
     "query-string": "^6.11.1",
     "ws": "^6.1.0",
     "xhr": "^2.4.1"
@@ -68,6 +69,7 @@
   "devDependencies": {
     "@types/chai": "^4.0.10",
     "@types/mocha": "^5.2.1",
+    "@types/papaparse": "^5.3.1",
     "@types/request": "^2.47.1",
     "@types/request-promise": "^4.1.42",
     "babel-core": "^6.26.0",
