--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jsc8",
-  "version": "0.17.6-beta.6",
+  "version": "0.17.11",
   "license": "Apache-2.0",
-  "description": "The official C8 JavaScript driver.",
+  "description": "The official C8 JavaScript SDK.",
   "homepage": "https://github.com/macrometacorp/jsC8",
   "bugs": {
     "url": "https://github.com/macrometacorp/jsC8/issues"
