--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsc8",
-  "version": "0.17.11",
+  "version": "0.17.11-update.1",
   "license": "Apache-2.0",
   "description": "The official C8 JavaScript SDK.",
   "homepage": "https://github.com/macrometacorp/jsC8",
@@ -14,6 +14,7 @@
   "author": "C8 ",
   "keywords": [
     "c8",
+    "sdk",
     "c8db",
     "c8ql",
     "nosql",
