Added first redis command

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /node_modules
 /lib
 .DS_Store
+
+// Ignoring main.ts used for debuging in VS code
+main.ts
+
+// Ignoring .env files
+.env
+.env.test
