--- a/package.json
+++ b/package.json
@@ -57,6 +57,14 @@
     "predevTest": "npm run dist",
     "devTest": "env TEST_C8_URL=https://dino-fra.eng.macrometa.io/ mocha --reporter spec --timeout 60000 lib/async/test/41-redis.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*": "prettier --write"
+  },
   "dependencies": {
     "es6-error": "^4.1.1",
     "jwt-decode": "^2.2.0",
@@ -85,6 +93,7 @@
     "eslint": "^4.13.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.3.1",
+    "husky": "^8.0.2",
     "mocha": "^5.2.0",
     "mochawesome": "^4.1.0",
     "npm-run-all": "^4.1.5",
