--- a/package.json
+++ b/package.json
@@ -57,14 +57,6 @@
     "predevTest": "npm run dist",
     "devTest": "env TEST_C8_URL=https://dino-fra.eng.macrometa.io/ mocha --reporter spec --timeout 60000 lib/async/test/41-redis.js"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*": "prettier --write"
-  },
   "dependencies": {
     "es6-error": "^4.1.1",
     "jwt-decode": "^2.2.0",
@@ -98,6 +90,7 @@
     "mochawesome": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.9.1",
+    "pretty-quick": "^3.1.3",
     "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
     "source-map-support": "^0.5.0",
