--- a/package.json
+++ b/package.json
@@ -68,8 +68,9 @@
     "xhr": "^2.4.1"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20221111.1",
     "@types/chai": "^4.0.10",
-    "@types/mocha": "^5.2.1",
+    "@types/mocha": "^5.2.7",
     "@types/papaparse": "^5.3.1",
     "@types/request": "^2.47.1",
     "@types/request-promise": "^4.1.42",
@@ -97,7 +98,7 @@
     "ts-loader": "^3.2.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^2.6.2",
+    "typescript": "^4.9.4",
     "webpack": "^3.0.0",
     "xunit-file": "^1.0.0",
     "yarn": "^1.10.1"
