--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsc8",
-  "version": "0.17.11-update.1",
+  "version": "0.18.0",
   "license": "Apache-2.0",
   "description": "The official C8 JavaScript SDK.",
   "homepage": "https://github.com/macrometacorp/jsC8",
