--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
+# Ignoring Node
 /node_modules
 /lib
-.DS_Store
 
-// Ignoring main.ts used for debuging in VS code
+# Ignoring main.ts used for debuging in VS code
 main.ts
 
-// Ignoring .env files
+# Ignoring .env files
 .env
 .env.test
 
-// Igniring Jetbrains IDE
+# Ignoring test coverage report
+.nyc_output/
+coverage/
+
+# Igniring Jetbrains IDE
 .idea/
+
+# Ignoring Mac file finder files
+.DS_Store
