--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsc8",
   "version": "0.18.0",
   "license": "Apache-2.0",
-  "description": "The official C8 JavaScript SDK.",
+  "description": "The official Macrometa JavaScript SDK.",
   "homepage": "https://github.com/macrometacorp/jsC8",
   "bugs": {
     "url": "https://github.com/macrometacorp/jsC8/issues"
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "https://github.com/macrometacorp/jsC8.git"
   },
-  "author": "C8 ",
+  "author": "Macrometa",
   "keywords": [
     "c8",
     "sdk",
@@ -54,8 +54,8 @@
     "dist:web": "webpack",
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
     "prepare": "npm run dist && node -e 'require(\".\");'",
-    "predevTest": "npm run dist",
-    "devTest": "env TEST_C8_URL=https://test.eng1.macrometa.io mocha --reporter spec --timeout 60000 lib/async/test/41-redis.js"
+    "predevtest": "npm run dist",
+    "devtest": "nyc --reporter=html mocha --reporter spec --timeout 60000 lib/async/test/"
   },
   "dependencies": {
     "es6-error": "^4.1.1",
@@ -90,6 +90,7 @@
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
     "prettier": "^1.9.1",
     "pretty-quick": "^3.1.3",
     "regenerator-runtime": "^0.11.1",
