--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dist": "rimraf lib && npm-run-all --parallel dist:* && cpy src/index.all.js --rename index.js lib/",
     "prepare": "npm run dist && node -e 'require(\".\");'",
     "predevtest": "npm run dist",
+    "lint": "prettier --write .",
     "devtest": "nyc --reporter=html mocha --reporter spec --timeout 60000 lib/async/test/"
   },
   "dependencies": {
@@ -91,7 +92,7 @@
     "mochawesome": "^7.1.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^1.9.1",
+    "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
     "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
