--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "mochawesome": "^7.1.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.8.3",
+    "prettier": "2.8.3",
     "pretty-quick": "^3.1.3",
     "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
