--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "ci": "mocha --reporter spec --require source-map-support/register --timeout 10000 lib/cjs/test",
     "preci": "yarn install",
     "jenkins": "yarn ci -- --timeout 0 --reporter xunit-file",
-    "dist:cjs": "tsc -p . --outDir ./lib/cjs/ --declarationMap true && cp src/index.js lib/cjs/index.js",
-    "dist:async": "tsc -p . --outDir ./lib/async/ --target es2018 --declarationMap true && cp src/index.js lib/async/index.js",
+    "dist:cjs": "tsc -p . --outDir ./lib/cjs/ --declarationMap true && cp src/index.js lib/cjs/index.js && rsync -a src/test/mockFiles/ lib/async/test/mockFiles/",
+    "dist:async": "tsc -p . --outDir ./lib/async/ --target es2018 --declarationMap true && cp src/index.js lib/async/index.js && rsync -a src/test/mockFiles/ lib/async/test/mockFiles/",
     "dist:web": "webpack",
     "dist": "rimraf lib && cpy src/index.all.js --rename index.js lib/ && mv lib/src/index.js lib/ && rm -rf lib/src && npm-run-all --parallel dist:* && mkdir -p lib ",
     "prepare": "npm run dist && node -e 'require(\".\");'",
