--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsc8",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "Apache-2.0",
   "description": "The official Macrometa JavaScript SDK.",
   "homepage": "https://github.com/macrometacorp/jsC8",
@@ -59,6 +59,7 @@
     "devtest": "nyc --reporter=html mocha --reporter spec --timeout 60000 lib/async/test/"
   },
   "dependencies": {
+    "browserslist": "^4.21.10",
     "es6-error": "^4.1.1",
     "jwt-decode": "^2.2.0",
     "linkedlist": "^1.0.1",
